# ToDoListSystem

./: .gitignore  README.md  docker-compose.yml  package-lock.json  test_docker_setup.sh
backend/: Dockerfile  alembic.ini  health_check.py  pyproject.toml  requirements.txt  test_language_detection.py
backend/alembic/: env.py
backend/alembic/versions/: 38b011bbfdf1_create_todos_table.py  8641c975b0f9_change_urgency_to_integer.py  9819e37260e3_add_urgency_column.py  aaaaad185e2e_add_urgency_column.py
backend/app/: ai_service.py  crud.py  database.py  main.py  models.py  schema.py  schemas.py
backend/app/api/endpoints/: todos.py
backend/app/graphql/: schema.py  types.py
backend/app/migrations/versions/: add_urgency_to_todos.py
backend/app/tests/: test_urgency.py
backend/tests/: conftest.py  test_api.py  test_backend.py  test_todos.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/cypress/e2e/: todo.cy.ts
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/components/: Layout.tsx  SortDropdown.tsx  SuggestionPanel.tsx  TodoItem.tsx  TodoListContainer.tsx  TodoSection.tsx
frontend/src/components/__tests__/: Todo.test.tsx  TodoForm.test.tsx  TodoList.test.tsx
frontend/src/components/ui/: ConfirmDialog.tsx  UrgencySelector.tsx  dropdown-menu.tsx  input.tsx  use-toast.ts
frontend/src/graphql/: queries.ts  todos.ts
frontend/src/hooks/: useTodos.ts
frontend/src/pages/: Home.tsx
frontend/src/queries/: todos.ts
frontend/src/types/: index.ts  todo.ts
