[project]
name = "todolist-backend"
version = "0.1.0"
description = "Backend for the ToDo List System"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "pydantic>=1.8.0,<2.0.0",
    "sqlalchemy>=1.4.0,<2.0.0",
    "uvicorn>=0.15.0,<0.16.0",
    "python-dotenv>=0.19.0",
    "alembic>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
